# Funky-Monky-Friday

./: .gitignore  CMakeLists.txt  Graphics.cbp  Graphics.layout~master  Noget Jacob var en god idé.txt  Nyt tekstdokument.txt  README.md  main.cpp
include/: Doodeling.h  Instillinger.h  MoveArrow.h  Musik.h  Sprite_container.h  Startscreen.h  Startskærm.h  init.h
src/: Doodeling.cpp  Instillinger.cpp  MoveArrow.cpp  Musik.cpp  Sprite_container.cpp  Startscreen.cpp  Startskærm.cpp  init.cpp
